Do not perform spellcheck when prevented by text composition

Durint text composition, a flag TypingCommand::should_prevent_spell_checking_
is set, but is currently not used, causing spellcheck underlines appear
during composition.

This patch fixes the issue by utilizing the flag.

Bug: 754453
Change-Id: I852c99dcbd6130836ae6b4e19b9e18fbbbd9bed5
Reviewed-on: https://chromium-review.googlesource.com/613665
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Ryan Landay <rlanday@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494337}
Former-commit-id: 9768f0d44d7098cc769771f7e024425b8408656e